--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.26 :: Bitstarter forge</title>
+    <title>:: v 0.27 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -116,6 +116,7 @@
   						<li class="active"><a href="#">Home</a></li>
   						<li><a href="#about">About</a></li>
   						<li><a href="#contact">Contact</a></li>
+  						<li><a href="#kel">KEL</a></li>
   					</ul>
   				</div>
   			</div>
@@ -188,6 +189,7 @@
 				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
 				<!-- AddThis Button END -->
+				<a id="kel"></a>
   			</div>
   		</div>
   	</div>
@@ -198,9 +200,12 @@
   		</div>
   		<div class="span5 copy">
   			<p>
- 				(*) <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">button works on amazon hosted (staging) environment</a>. On heroku broken at the moment. And actually only 1 backer, me, tested twice. The info is static and I update it manually according to notifications from coinbase.<br>
-				Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
- 				There will be real fundraising going on in October 2013. At the moment this is only about the class project and myself learning new stuff. Here mostly current frameworks for web development and responsive design basics.<a id="about"></a>
+  				KEL (known errors list):<br>
+ 				1. bitcoin button works only on <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">amazon hosted</a> (staging) environment. broken on heroku (nice domain name).<br> 
+ 				2. static donor info. Number of backers is updated manually according to notifications from coinbase, p.ex.<br>
+				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering" and myself learning new stuff. Here mostly current frameworks for web development and responsive design basics.<br>
+ 				There will be real fundraising going on in October 2013.<a id="about"></a><br>
+ 				4. page ... slow ... loading ... as f**k (needs speedup).
   			</p>
   		</div>
   	</div>
@@ -208,7 +213,7 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
-				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course class rather then a fully featured fundraising website. We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts.
+				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on it continuously until October 2013 and help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course class rather then a fully featured fundraising website. We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts.
   			</p>
   		</div>
   		<div class="span5 asset">
@@ -223,7 +228,7 @@
   		<div class="span5 copy">
   			<p>
 				Thanks to:<br> 
-				<a href="http://stanford.edu/">Stanford U</a> for CS106, CS183 and other online study materials;<br> 
+				<a href="http://stanford.edu/">Stanford U</a> for CS106, CS183/<a href="http://startup.stanford.edu/">CS184</a> and other online study materials;<br> 
 				<a href="https://www.coursera.org/">Coursera.org</a> for courses like this one;<br> 
 				<a href="http://www.strassen.lu/">Strassen comune</a> for the Luxembourg <a href="http://www.hackerspace.lu/">hackerspace</a>;<br> 
 				<a href="http://heroku.com/">heroku</a>, 
@@ -239,7 +244,7 @@
   			<p><a id="contact"></a>
   				Contact:<br>
   				for flight demos visit hackerspace Strassen, Luxembourg<br>
-  				pgp, 
+  				pgp/email, twitter, skype & co. 
   			</p>
   		</div>
   		<div class="span5 asset">
