028 minor text edits
version for heroku :)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.27 :: Bitstarter forge</title>
+    <title>UAVs Bitstarter :: v 0.28 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -201,7 +201,7 @@
   		<div class="span5 copy">
   			<p>
   				KEL (known errors list):<br>
- 				1. bitcoin button works only on <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">amazon hosted</a> (staging) environment. broken on heroku (nice domain name).<br> 
+ 				1. bitcoin button works only on <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">amazon hosted</a> (staging) environment and not in all browsers. for sure broken on heroku (the instance with a nice domain name).<br> 
  				2. static donor info. Number of backers is updated manually according to notifications from coinbase, p.ex.<br>
 				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering" and myself learning new stuff. Here mostly current frameworks for web development and responsive design basics.<br>
  				There will be real fundraising going on in October 2013.<a id="about"></a><br>
