029 more known errors recorded
... wrong on so many levels ;)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.28 ::</title>
+    <title>UAVs Bitstarter :: v 0.29 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -205,7 +205,10 @@
  				2. static donor info. Number of backers is updated manually according to notifications from coinbase, p.ex.<br>
 				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering" and myself learning new stuff. Here mostly current frameworks for web development and responsive design basics.<br>
  				There will be real fundraising going on in October 2013.<a id="about"></a><br>
- 				4. page ... slow ... loading ... as f**k (needs speedup).
+ 				4. page ... loads ... really ... slowly ... (needs speedup).<br>
+ 				5. difficult to check bitcoin status :( so far got 3 different addresses from coinbase.<br>
+ 				6. looks the same on mobile, just downsized. not really responsive at the moment.<br>
+ 				7. google analytics missing
   			</p>
   		</div>
   	</div>
@@ -234,7 +237,7 @@
 				<a href="http://heroku.com/">heroku</a>, 
 				<a href="http://aws.amazon.com/">amazon</a> and 
 				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> for <a href="http://en.wikipedia.org/wiki/Category:Web_hosting">hosting</a>;<br>
-				and <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project and <a href="http://www.openpilot.org">Open Pilot</a> for images.
+				<a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project<br>and <a href="http://www.openpilot.org">Open Pilot</a> for images used here.
   			</p>
   		</div>
   	</div>
@@ -243,8 +246,9 @@
   		<div class="span5 offset1 copy copy-right">
   			<p><a id="contact"></a>
   				Contact:<br>
-  				for flight demos visit hackerspace Strassen, Luxembourg<br>
-  				pgp/email, twitter, skype & co. 
+  				for flight demos <a href="http://www.hackerspace.lu/">visit us</a> in Strassen, Luxembourg<br>
+  				<br>
+  				todo: add pgp/email, twitter, skype & co. 
   			</p>
   		</div>
   		<div class="span5 asset">
