--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.31 ::</title>
+    <title>UAVs Bitstarter :: v 0.32 - dev branch started here ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -264,8 +264,8 @@
   		<div class="span5 copy">
   			<p>
 				Statistics:<br> 
-				<a href="#">google analytics</a>;<br> 
-				sum of <a href="#">bitcoin</a> donations;<br> 
+				<a href="#">google analytics</a> - KEL #7;<br> 
+				sum of <a href="#">bitcoin</a> donations - KEL #5 and KEL #2;<br> 
 				<a href="#">social</a> (tracker views vs reposts);<br> 
 				<a href="#">bandwidth</a> and other fun facts. 
   			</p>
