--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.31 ::</title>
+    <title>UAVs Bitstarter :: v 0.3 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -110,13 +110,12 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="http://9to5passion.eu/">Bitstarter</a>
+  				<a class="brand" href="#">Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
   						<li class="active"><a href="#">Home</a></li>
   						<li><a href="#about">About</a></li>
   						<li><a href="#contact">Contact</a></li>
-  						<li><a href="#stats">Statistics</a></li>
   						<li><a href="#kel">KEL</a></li>
   					</ul>
   				</div>
@@ -238,37 +237,22 @@
 				<a href="http://heroku.com/">heroku</a>, 
 				<a href="http://aws.amazon.com/">amazon</a> and 
 				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> for <a href="http://en.wikipedia.org/wiki/Category:Web_hosting">hosting</a>;<br>
-				<a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project<a id="contact"></a><br>and <a href="http://www.openpilot.org">Open Pilot</a> for images used here.
+				<a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project<br>and <a href="http://www.openpilot.org">Open Pilot</a> for images used here.
   			</p>
   		</div>
   	</div>
 
   	<div class="row-fluid section4">
   		<div class="span5 offset1 copy copy-right">
-  			<p>
+  			<p><a id="contact"></a>
   				Contact:<br>
   				for flight demos <a href="http://www.hackerspace.lu/">visit us</a> in Strassen, Luxembourg<br>
   				<br>
-  				todo: add pgp/email, twitter, skype & co. <a id="stats"></a>
+  				todo: add pgp/email, twitter, skype & co. 
   			</p>
   		</div>
   		<div class="span5 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/1.png">
-  		</div>
-  	</div>
-
-  	<div class="row-fluid section5">
-  		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="http://industrial.sk/img/2.png">
-  		</div>
-  		<div class="span5 copy">
-  			<p>
-				Statistics:<br> 
-				<a href="#">google analytics</a>;<br> 
-				sum of <a href="#">bitcoin</a> donations;<br> 
-				<a href="#">social</a> (tracker views vs reposts);<br> 
-				<a href="#">bandwidth</a> and other fun facts. 
-  			</p>
   		</div>
   	</div>
 
