--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.33 ::</title>
+    <title>UAVs Bitstarter :: v 0.34 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -117,6 +117,7 @@
   						<li><a href="#about">About</a></li>
   						<li><a href="#contact">Contact</a></li>
   						<li><a href="#kel">KEL</a></li>
+  						<li><a href="#faq">FAQ</a></li>
   					</ul>
   				</div>
   			</div>
@@ -231,7 +232,7 @@
   		<div class="span5 copy">
   			<p>
 				Thanks to:<br> 
-				<a href="http://stanford.edu/">Stanford U</a> for CS106, CS183/<a href="http://startup.stanford.edu/">CS184</a> and other online study materials;<br> 
+				<a href="http://stanford.edu">Stanford U</a> for <a href="http://www.stanford.edu/class/cs106a/">CS106</a>, <a href="http://robertocsantana.com/?p=32">CS183</a>/<a href="http://startup.stanford.edu/">CS184</a> and <a href="http://itunes.stanford.edu/">more</a>;<br> 
 				<a href="https://www.coursera.org/">Coursera.org</a> for courses like this one;<br> 
 				<a href="http://www.strassen.lu/">Strassen comune</a> for the Luxembourg <a href="http://www.hackerspace.lu/">hackerspace</a>;<br> 
 				<a href="http://heroku.com/">heroku</a>, 
@@ -248,13 +249,46 @@
   				Contact:<br>
   				for flight demos <a href="http://www.hackerspace.lu/">visit us</a> in Strassen, Luxembourg<br>
   				<br>
-  				todo: add pgp/email, twitter, skype & co. 
+  				todo: add pgp/email, twitter, skype & co. <a id="faq">
   			</p>
   		</div>
   		<div class="span5 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/1.png">
   		</div>
   	</div>
+
+  	<div class="row-fluid faq">
+		<div class="span10 offset1">
+			<h3>FAQ</h3>
+			<div class="accordion" id="accordion2">
+	    		<div class="accordion-group">
+	    			<div class="accordion-heading">
+						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+						What and when needs to be build?
+						</a>
+		   			</div>
+		   			<div id="collapseOne" class="accordion-body collapse">
+						<div class="accordion-inner">
+							What: Multiple copies of an UAV carying a camera and a bottle of water - with bottle release mechanisn (multiple sets of electronics and cameras).<br>
+							When: All I know is "October"
+						</div>
+					</div>
+		    	</div>
+				<div class="accordion-group">
+	    			<div class="accordion-heading">
+						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+						What exactly will the plane do?
+						</a>
+					</div>
+					<div id="collapseTwo" class="accordion-body collapse">
+						<div class="accordion-inner">
+							It will be looking for a man sized figurine wearing yellow shirt and blue trousers (in the desert) and once identified, it will drop the bottle of water as close to it as possible (water must land within 100 meters of the target, preferably closer).
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div class="row-fluid footer">
 		<div class="span12">
