--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.34 ::</title>
+    <title>UAVs Bitstarter :: v 0.37 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"-->
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
+    <!--link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"-->
     <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css">
+    <!--link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css"-->
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700," rel="stylesheet" type="text/css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
@@ -170,11 +170,11 @@
   			</div>
 
   			<div class="span6 offset3 order">
-				<div class="row buttons">
+				<!-- div class="row buttons" -->
 					<!-- div class="span6" -->
 						<a class="coinbase-button" data-code="f031c1e05af51db96cb9e6a168c734e6" data-button-style="donation_large" href="https://coinbase.com/checkouts/f031c1e05af51db96cb9e6a168c734e6">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 					<!-- /div-->
-				</div>
+				<!-- /div -->
   			</div>
 
   			<div class="span8 offset2 social">
