--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.38 ::</title>
+    <title>UAVs Bitstarter :: v 0.39 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"-->
@@ -110,7 +110,7 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="#">Bitstarter</a>
+  				<a class="brand" href="http://9to5passion.eu/#">Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
   						<li class="active"><a href="#">Home</a></li>
@@ -236,8 +236,10 @@
 				<a href="https://www.coursera.org/">Coursera.org</a> for courses like this one;<br> 
 				<a href="http://www.strassen.lu/">Strassen comune</a> for the Luxembourg <a href="http://www.hackerspace.lu/">hackerspace</a>;<br> 
 				<a href="http://heroku.com/">heroku</a>, 
-				<a href="http://aws.amazon.com/">amazon</a> and 
-				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> for <a href="http://en.wikipedia.org/wiki/Category:Web_hosting">hosting</a>;<br>
+				<a href="http://aws.amazon.com/">amazon</a>, 
+				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> and
+				<a href="https://digmia.com/">digmia</a> for 
+				<a href="http://en.wikipedia.org/wiki/Category:Web_hosting">hosting</a>;<br>
 				<a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project<br>and <a href="http://www.openpilot.org">Open Pilot</a> for images used here.
   			</p>
   		</div>
@@ -248,8 +250,8 @@
   			<p><a id="contact"></a>
   				Contact:<br>
   				for flight demos <a href="http://www.hackerspace.lu/">visit us</a> in Strassen, Luxembourg<br>
-  				<br>
-  				todo: add pgp/email, twitter, skype & co. <a id="faq">
+  				twitter<br>
+  				todo: add pgp/email, skype & co. <a id="faq">
   			</p>
   		</div>
   		<div class="span5 asset">
@@ -286,6 +288,18 @@
 						</div>
 					</div>
 				</div>
+				<div class="accordion-group">
+	    			<div class="accordion-heading">
+						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+						Why another bitcoin accepting site?
+						</a>
+					</div>
+					<div id="collapseThree" class="accordion-body collapse">
+						<div class="accordion-inner">
+							It's part of the assignment, easy to use (thx Coinbase), is a payment option with low entry barier (no SSL/bank account needed), convenient, transparent to donors, modern (resonates well with UAV).
+						</div>
+					</div>
+				</div>		
 			</div>
 		</div>
 	</div>
