--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.39 ::</title>
+    <title>UAVs Bitstarter :: v 0.4 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"-->
@@ -99,6 +99,18 @@
 		color: #ccccff;
 	}
     </style>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-43392208-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+
   </head>
   <body>
 
@@ -204,10 +216,10 @@
   				KEL (known errors list):<br>
  				1. bitcoin button works only on <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">amazon hosted</a> (staging) environment and not in all browsers. for sure broken on heroku (the instance with a nice domain name).<br> 
  				2. static donor info. Number of backers is updated manually according to notifications from coinbase, p.ex.<br>
-				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering" and myself learning new stuff. Here mostly current frameworks for web development and responsive design basics.<br>
- 				There will be real fundraising going on in October 2013.<br>
- 				4. page ... loads ... really ... slowly ... (needs speedup).<br>
- 				5. difficult to check bitcoin status :( so far got 4 different addresses from coinbase.<br>
+				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
+ 				There will be real fundraising going on in October 2013 though.<br>
+ 				<strike>4. page ... loads ... really ... slowly ... (needs speedup).</strike><br>
+ 				5. difficult to check bitcoin status in one place :( so far got 4 different addresses from coinbase.<br>
  				6. looks the same on mobile, just downsized. not really responsive at the moment.<a id="about"></a><br>
  				7. google analytics missing
   			</p>
@@ -310,6 +322,14 @@
 			</p>
 		</div>
 	</div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-43392208-1', 'herokuapp.com');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
