--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.4 ::</title>
+    <title>UAVs Bitstarter :: v 0.41 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"-->
@@ -214,14 +214,14 @@
   		<div class="span5 copy">
   			<p>
   				KEL (known errors list):<br>
- 				1. bitcoin button works only on <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">amazon hosted</a> (staging) environment and not in all browsers. for sure broken on heroku (the instance with a nice domain name).<br> 
+ 				1. bitcoin button works only on <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">amazon hosted</a> (staging) environment and not in all browsers. for sure broken on <a href="http://9to5passion.eu/">heroku</a> (production).<br> 
  				2. static donor info. Number of backers is updated manually according to notifications from coinbase, p.ex.<br>
 				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There will be real fundraising going on in October 2013 though.<br>
  				<strike>4. page ... loads ... really ... slowly ... (needs speedup).</strike><br>
  				5. difficult to check bitcoin status in one place :( so far got 4 different addresses from coinbase.<br>
  				6. looks the same on mobile, just downsized. not really responsive at the moment.<a id="about"></a><br>
- 				7. google analytics missing
+ 				<strike>7. google analytics missing</strike>
   			</p>
   		</div>
   	</div>
