042 fixed bitcoin button ;)
& minor text update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.41 ::</title>
+    <title>UAVs Bitstarter :: v 0.42 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"-->
@@ -122,7 +122,7 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="http://9to5passion.eu/#">Bitstarter</a>
+  				<a class="brand" href="http://stormy-temple-2027.herokuapp.com/#">Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
   						<li class="active"><a href="#">Home</a></li>
@@ -182,11 +182,11 @@
   			</div>
 
   			<div class="span6 offset3 order">
-				<!-- div class="row buttons" -->
+				<div class="row buttons">
 					<!-- div class="span6" -->
 						<a class="coinbase-button" data-code="f031c1e05af51db96cb9e6a168c734e6" data-button-style="donation_large" href="https://coinbase.com/checkouts/f031c1e05af51db96cb9e6a168c734e6">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 					<!-- /div-->
-				<!-- /div -->
+				</div>
   			</div>
 
   			<div class="span8 offset2 social">
@@ -214,7 +214,7 @@
   		<div class="span5 copy">
   			<p>
   				KEL (known errors list):<br>
- 				1. bitcoin button works only on <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">amazon hosted</a> (staging) environment and not in all browsers. for sure broken on <a href="http://9to5passion.eu/">heroku</a> (production).<br> 
+ 				<strike>1. bitcoin button works now 'everywhere': <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">staging</a>, <a href="http://stormy-temple-2027.herokuapp.com/">production</a></strike><br> 
  				2. static donor info. Number of backers is updated manually according to notifications from coinbase, p.ex.<br>
 				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There will be real fundraising going on in October 2013 though.<br>
@@ -229,7 +229,7 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
-				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on it continuously until October 2013 and help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course class rather then a fully featured fundraising website. We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts.
+				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on it continuously until October 2013 and help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit postpone your donations. Current site is more of a working prototype rather then a fully featured fundraising website. We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is first estimate of the costs of cameras and electronics for the competition planes and will be updated when the fundraising really starts (p.ex. bill of material).
   			</p>
   		</div>
   		<div class="span5 asset">
