--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.42 ::</title>
+    <title>UAVs Bitstarter :: v 0.43 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"-->
@@ -122,7 +122,7 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="http://stormy-temple-2027.herokuapp.com/#">Bitstarter</a>
+  				<a class="brand" href="http://stormy-temple-2027.herokuapp.com/">Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
   						<li class="active"><a href="#">Home</a></li>
@@ -158,12 +158,12 @@
   				<div class="statistics">
   					<div class="span4">
   						<div class="linediv-l">
-  							<h3>4</h3><p>backers (*)</p>
+  							<h3>5</h3><p>backers (*)</p>
   						</div>
   					</div>
   					<div class="span4">
   						<div class="linediv-c">
-  							<h3>$8.5</h3><p>of $3,000</p>
+  							<h3>$9.5</h3><p>of $3,000</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -219,7 +219,7 @@
 				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There will be real fundraising going on in October 2013 though.<br>
  				<strike>4. page ... loads ... really ... slowly ... (needs speedup).</strike><br>
- 				5. difficult to check bitcoin status in one place :( so far got 4 different addresses from coinbase.<br>
+ 				5. difficult to check bitcoin status in one place :( so far got 5 different addresses from coinbase. wonder if they're related (p.ex. like BIP0032 deterministic wallet addresses)<br>
  				6. looks the same on mobile, just downsized. not really responsive at the moment.<a id="about"></a><br>
  				<strike>7. google analytics missing</strike>
   			</p>
@@ -309,6 +309,18 @@
 					<div id="collapseThree" class="accordion-body collapse">
 						<div class="accordion-inner">
 							It's part of the assignment, easy to use (thx Coinbase), is a payment option with low entry barier (no SSL/bank account needed), convenient, transparent to donors, modern (resonates well with UAV).
+						</div>
+					</div>
+				</div>		
+				<div class="accordion-group">
+	    			<div class="accordion-heading">
+						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+						How to host on herokuapp with custom domain?
+						</a>
+					</div>
+					<div id="collapseFour" class="accordion-body collapse">
+						<div class="accordion-inner">
+							This one is still work in progress. I did not found the combination of settings to configure my herokuapps account and the app to respond to calls for mydomain.eu.
 						</div>
 					</div>
 				</div>		
