--- a/index.html
+++ b/index.html
@@ -2,7 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.44 ::</title>
+    <title>UAVs Bitstarter :: v 0.45 ::</title>
+    <!-- as seen on https://github.com/ot4me/bitstarter/ around August 2013 -->
+    <!-- -->
+    <!-- if you reed source code, here's a little extra -->    
+    <!-- -->
+    <!-- thanks to our sponsors: -->
+    <!-- digmia.com - expert computing -->
+    <!-- nethemba.com - all about security -->
+    <!-- coursera.org stanford.edu wikipedia heroku(app) syn2cat -->
+    <!-- all cool software developers that made this possible -->
+    <!-- -->
+    <!-- eastern egg: the bitcoin address last seen during testing -->
+    <!-- -->
+    <!-- http://blockexplorer.com/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
+    <!-- https://blockchain.info/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
+    <!-- -->
+    <!-- some external links: -->
+    <!-- http://about.9to5passion.eu/ -->
+    <!-- http://digmia.com/pages/en.html -->
+    <!-- -->
+    <!-- -->
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"-->
