--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.45 ::</title>
+    <title>UAVs Bitstarter :: v 0.46 ::</title>
     <!-- as seen on https://github.com/ot4me/bitstarter/ around August 2013 -->
     <!-- -->
     <!-- if you reed source code, here's a little extra -->    
     <!-- -->
-    <!-- thanks to our sponsors: -->
+    <!-- quick & brief thanks to our sponsors and appreciated resources: -->
     <!-- digmia.com - expert computing -->
     <!-- nethemba.com - all about security -->
     <!-- coursera.org stanford.edu wikipedia heroku(app) syn2cat -->
@@ -19,9 +19,9 @@
     <!-- https://blockchain.info/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
     <!-- -->
     <!-- some external links: -->
-    <!-- http://about.9to5passion.eu/ -->
-    <!-- http://digmia.com/pages/en.html -->
-    <!-- -->
+    <!-- http://about.9to5passion.eu/ probably awaiting old dns entries to expire, might not work all the time -->
+    <!-- http://digmia.com/pages/en.html works (friends of mine) -->
+    <!-- https://www.nethemba.com/ (friends of mine) -->
     <!-- -->
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -382,6 +382,7 @@
 			</p>
 		</div>
 	</div>
+	
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
