--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.46 ::</title>
+    <title>UAVs Bitstarter :: v 0.47 ::</title>
     <!-- as seen on https://github.com/ot4me/bitstarter/ around August 2013 -->
     <!-- -->
     <!-- if you reed source code, here's a little extra -->    
@@ -350,24 +350,21 @@
 					</div>
 					<div id="collapseFive" class="accordion-body collapse">
 						<div class="accordion-inner">
-							1. bitcoin button - was in issue with dns forwarding and domain configuration - <strike>1. bitcoin button works now 'everywhere': <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">staging</a>, <a href="http://stormy-temple-2027.herokuapp.com/">production</a></strike><br> 
-			 				4. page ... loads ... - loading less external stuff at page first load <strike>really ... slowly ... (needs speedup).</strike><br>
-			 				7. GA installed <strike>google analytics missing</strike>
-
+							1. bitcoin button - was in issue with dns forwarding and domain configuration - [<strike>1. bitcoin button does not work at 9to5passion.eu; works now as expected <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">staging</a> and <a href="http://stormy-temple-2027.herokuapp.com/">production</a> respectively</strike>]<br> 
+			 				4. page ... loads ... - loading less external stuff at page first load [<strike>really ... slowly ... (needs speedup).</strike>]<br>
+			 				7. GA installed - not tested yet; credentials to be used to login and use GA [<strike>google analytics missing</strike>]
 						</div>
 					</div>
 				</div>		
 				<div class="accordion-group">
 	    			<div class="accordion-heading">
-						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
-						List of closed issues
+						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseSix">
+						Misc notes
 						</a>
 					</div>
-					<div id="collapseFive" class="accordion-body collapse">
+					<div id="collapseSix" class="accordion-body collapse">
 						<div class="accordion-inner">
-							1. bitcoin button - was in issue with dns forwarding and domain configuration - [<strike>1. bitcoin button does not work at 9to5passion.eu; works now as expected <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">staging</a> and <a href="http://stormy-temple-2027.herokuapp.com/">production</a> respectively</strike>]<br> 
-			 				4. page ... loads ... - loading less external stuff at page first load [<strike>really ... slowly ... (needs speedup).</strike>]<br>
-			 				7. GA installed - not tested yet; credentials to be used to login and use GA [<strike>google analytics missing</strike>]
+							API to coinbase, flagging entries, using db, asynchronous transfer, etc.
 						</div>
 					</div>
 				</div>
@@ -382,7 +379,7 @@
 			</p>
 		</div>
 	</div>
-	
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
