048 easter eggs added
resolved issue #5, need to work through async and api to solve #2.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.47 ::</title>
+    <title>UAVs Bitstarter :: v 0.48 ::</title>
     <!-- as seen on https://github.com/ot4me/bitstarter/ around August 2013 -->
     <!-- -->
     <!-- if you reed source code, here's a little extra -->    
@@ -13,12 +13,12 @@
     <!-- coursera.org stanford.edu wikipedia heroku(app) syn2cat -->
     <!-- all cool software developers that made this possible -->
     <!-- -->
-    <!-- eastern egg: the bitcoin address last seen during testing -->
+    <!-- :: v 0.46 :: easter egg:1 the bitcoin address last seen during testing -->
     <!-- -->
     <!-- http://blockexplorer.com/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
     <!-- https://blockchain.info/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
-    <!-- -->
-    <!-- some external links: -->
+    <!-- :: v 0.47 :: easter egg:2 about subdomain with hidden content -->
+    <!-- not to forget industrial.sk img hosting at http://quantumkiwi.com -->
     <!-- http://about.9to5passion.eu/ probably awaiting old dns entries to expire, might not work all the time -->
     <!-- http://digmia.com/pages/en.html works (friends of mine) -->
     <!-- https://www.nethemba.com/ (friends of mine) -->
@@ -233,12 +233,14 @@
   		</div>
   		<div class="span5 copy">
   			<p>
-  				KEL (known errors list):<br>
- 				2. static donor info. Number of backers is updated manually if at all.<br>
+  				Known errors list:<br>
+  		<!-- branch candidate / api / async flow / state variable -->
+ 				<i>2. static donor info. Number of backers is updated manually if at all.</i> (I've figured out how to fix this)<br>
 				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There will be real fundraising going on in October 2013 though.<br>
- 				5. missing link to bitcoin blockchain 'single address' and an overview of donations.<br>
- 				6. looks the same on mobile, just downsized. not really responsive at the moment.<a id="about"></a><br> 				
+ 				<strike>5. missing link to bitcoin blockchain 'single address' and an overview of donations.</strike> obsolete<br>
+ 		<!-- :: 048 :: priority 1 - branch candidate -->
+ 				6. looks the same on mobile, just downsized. not really responsive at the moment. I must have skipped a step in the development.<a id="about"></a><br> 				
   			</p>
   		</div>
   	</div>
