049 hiding FAQ 3..6 and a css
keep adding notes as comment into code.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.48 ::</title>
+    <title>UAVs Bitstarter :: v 0.49 ::</title>
     <!-- as seen on https://github.com/ot4me/bitstarter/ around August 2013 -->
     <!-- -->
     <!-- if you reed source code, here's a little extra -->    
@@ -30,7 +30,7 @@
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"-->
     <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css">
+    <!--link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css"-->
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700," rel="stylesheet" type="text/css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
@@ -238,7 +238,6 @@
  				<i>2. static donor info. Number of backers is updated manually if at all.</i> (I've figured out how to fix this)<br>
 				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There will be real fundraising going on in October 2013 though.<br>
- 				<strike>5. missing link to bitcoin blockchain 'single address' and an overview of donations.</strike> obsolete<br>
  		<!-- :: 048 :: priority 1 - branch candidate -->
  				6. looks the same on mobile, just downsized. not really responsive at the moment. I must have skipped a step in the development.<a id="about"></a><br> 				
   			</p>
@@ -280,7 +279,7 @@
   		<div class="span5 offset1 copy copy-right">
   			<p><a id="contact"></a>
   				Contact:<br>
-  				for flight demos <a href="http://www.hackerspace.lu/">visit us</a> in Strassen, Luxembourg<br>
+  				<a href="http://www.hackerspace.lu/">meet us</a> in Strassen, Luxembourg<br>
   				twitter<br>
   				todo: add pgp/email, skype & co. <a id="faq">
   			</p>
@@ -308,6 +307,7 @@
 						</div>
 					</div>
 		    	</div>
+		   		<!-- repetitive area end -->
 				<div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
@@ -320,6 +320,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- aand it's gone 049
 				<div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
@@ -354,6 +355,7 @@
 						<div class="accordion-inner">
 							1. bitcoin button - was in issue with dns forwarding and domain configuration - [<strike>1. bitcoin button does not work at 9to5passion.eu; works now as expected <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">staging</a> and <a href="http://stormy-temple-2027.herokuapp.com/">production</a> respectively</strike>]<br> 
 			 				4. page ... loads ... - loading less external stuff at page first load [<strike>really ... slowly ... (needs speedup).</strike>]<br>
+			 				5. transparent list of donations <strike>missing link to bitcoin blockchain 'single address' and an overview of donations.</strike> obsolete<br>
 			 				7. GA installed - not tested yet; credentials to be used to login and use GA [<strike>google analytics missing</strike>]
 						</div>
 					</div>
@@ -361,16 +363,16 @@
 				<div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseSix">
-						Misc notes
+						Howto display total bitcoin donations received?
 						</a>
 					</div>
 					<div id="collapseSix" class="accordion-body collapse">
 						<div class="accordion-inner">
-							API to coinbase, flagging entries, using db, asynchronous transfer, etc.
+							figure out API to coinbase, flagging entries, using db, asynchronous transfer, etc.
 						</div>
 					</div>
 				</div>
-				<!-- repetitive area end -->		
+				comment end 049 -->
 			</div>
 		</div>
 	</div>
