--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.49 ::</title>
+    <title>UAVs Bitstarter :: v 0.5 ::</title>
     <!-- as seen on https://github.com/ot4me/bitstarter/ around August 2013 -->
     <!-- -->
     <!-- if you reed source code, here's a little extra -->    
@@ -29,8 +29,8 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"-->
     <script src="js/bootstrap.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!--link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css"-->
+    <!-- 050 rem script src="js/bootstrap.min.js"></script-->
+    <!-- top navbar menu --><link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700," rel="stylesheet" type="text/css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
