051 more css removing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.5 ::</title>
+    <title>UAVs Bitstarter :: v 0.51 ::</title>
     <!-- as seen on https://github.com/ot4me/bitstarter/ around August 2013 -->
     <!-- -->
     <!-- if you reed source code, here's a little extra -->    
@@ -24,11 +24,11 @@
     <!-- https://www.nethemba.com/ (friends of mine) -->
     <!-- -->
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <!--051 rem link rel="stylesheet" type="text/css" href="css/bootstrap.css"-->
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"-->
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
     <!--link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"-->
-    <script src="js/bootstrap.js"></script>
+    <!-- 051 rem script src="js/bootstrap.js"></script-->
     <!-- 050 rem script src="js/bootstrap.min.js"></script-->
     <!-- top navbar menu --><link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
