--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.51 ::</title>
+    <title>UAVs Bitstarter :: v 0.52 ::</title>
+	<!-- 051 finished removing css links -->
+	<!-- todo1 responsive design -->
+	<!-- todo2 async flow control -->
     <!-- as seen on https://github.com/ot4me/bitstarter/ around August 2013 -->
-    <!-- -->
+	<!-- -->
     <!-- if you reed source code, here's a little extra -->    
     <!-- -->
     <!-- quick & brief thanks to our sponsors and appreciated resources: -->
@@ -13,23 +16,19 @@
     <!-- coursera.org stanford.edu wikipedia heroku(app) syn2cat -->
     <!-- all cool software developers that made this possible -->
     <!-- -->
-    <!-- :: v 0.46 :: easter egg:1 the bitcoin address last seen during testing -->
+    <!-- easter egg:1 the bitcoin address last seen during testing -->
     <!-- -->
     <!-- http://blockexplorer.com/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
     <!-- https://blockchain.info/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
-    <!-- :: v 0.47 :: easter egg:2 about subdomain with hidden content -->
-    <!-- not to forget industrial.sk img hosting at http://quantumkiwi.com -->
+    <!-- -->
+    <!-- easter egg:2 about subdomain with hidden content -->
+    <!-- not to forget img hosting at http://quantumkiwi.com via industrial.sk -->
     <!-- http://about.9to5passion.eu/ probably awaiting old dns entries to expire, might not work all the time -->
     <!-- http://digmia.com/pages/en.html works (friends of mine) -->
     <!-- https://www.nethemba.com/ (friends of mine) -->
     <!-- -->
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <!--051 rem link rel="stylesheet" type="text/css" href="css/bootstrap.css"-->
-    <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"-->
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
-    <!--link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"-->
-    <!-- 051 rem script src="js/bootstrap.js"></script-->
-    <!-- 050 rem script src="js/bootstrap.min.js"></script-->
     <!-- top navbar menu --><link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700," rel="stylesheet" type="text/css">
@@ -235,7 +234,7 @@
   			<p>
   				Known errors list:<br>
   		<!-- branch candidate / api / async flow / state variable -->
- 				<i>2. static donor info. Number of backers is updated manually if at all.</i> (I've figured out how to fix this)<br>
+ 				<i>2. static donations progressbar</i> (I've figured out how to fix this)<br>
 				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There will be real fundraising going on in October 2013 though.<br>
  		<!-- :: 048 :: priority 1 - branch candidate -->
