--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.52 ::</title>
+    <title>UAVs Bitstarter :: v 0.53 ::</title>
 	<!-- 051 finished removing css links -->
 	<!-- todo1 responsive design -->
 	<!-- todo2 async flow control -->
-    <!-- as seen on https://github.com/ot4me/bitstarter/ around August 2013 -->
+    <!-- 053 removed reference to github(username) github.com/.../bitstarter/ around August 2013 -->
 	<!-- -->
-    <!-- if you reed source code, here's a little extra -->    
+    <!-- if you reed source code, you will find everything in the comments -->    
     <!-- -->
     <!-- quick & brief thanks to our sponsors and appreciated resources: -->
     <!-- digmia.com - expert computing -->
@@ -141,7 +141,7 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="http://stormy-temple-2027.herokuapp.com/">Bitstarter</a>
+  				<a class="brand" href="#">Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
   						<li class="active"><a href="#">Home</a></li>
