--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.53 ::</title>
+    <title>UAVs Bitstarter :: v 0.54 ::</title>
 	<!-- 051 finished removing css links -->
 	<!-- todo1 responsive design -->
 	<!-- todo2 async flow control -->
@@ -280,7 +280,7 @@
   				Contact:<br>
   				<a href="http://www.hackerspace.lu/">meet us</a> in Strassen, Luxembourg<br>
   				twitter<br>
-  				todo: add pgp/email, skype & co. <a id="faq">
+  				todo: add pgp/email, skype & co. <a id="faq"></a>
   			</p>
   		</div>
   		<div class="span5 asset">
@@ -289,25 +289,25 @@
   	</div>
 
   	<div class="row-fluid faq">
-		<div class="span10 offset1">
-			<h3>FAQ</h3>
-			<div class="accordion" id="accordion2">
+		  <div class="span10 offset1">
+			 <h3>FAQ</h3>
+			 <div class="accordion" id="accordion2">
 				<!-- repetitive area start -->
 	    		<div class="accordion-group">
 	    			<div class="accordion-heading">
-						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-						What and when needs to be build?
-						</a>
+						  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+						  What and when needs to be build?
+						  </a>
 		   			</div>
 		   			<div id="collapseOne" class="accordion-body collapse">
-						<div class="accordion-inner">
-							What: Multiple copies of an UAV carying a camera and a bottle of water - with bottle release mechanisn (multiple sets of electronics and cameras).<br>
-							When: All I know is "October"
-						</div>
-					</div>
+	 					   <div class="accordion-inner">
+  						  	What: Multiple copies of an UAV carying a camera and a bottle of water - with bottle release mechanisn (multiple sets of electronics and cameras).<br>
+							   When: All I know is "October"
+					 	   </div>
+					   </div>
 		    	</div>
 		   		<!-- repetitive area end -->
-				<div class="accordion-group">
+				  <div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
 						What exactly will the plane do?
