055 faq one more time
sofar changed div id name values

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.54 ::</title>
-	<!-- 051 finished removing css links -->
+    <title>UAVs Bitstarter :: v 0.55 ::</title>
+	<!-- 055 faq debug -->
 	<!-- todo1 responsive design -->
 	<!-- todo2 async flow control -->
     <!-- 053 removed reference to github(username) github.com/.../bitstarter/ around August 2013 -->
@@ -299,7 +299,7 @@
 						  What and when needs to be build?
 						  </a>
 		   			</div>
-		   			<div id="collapseOne" class="accordion-body collapse">
+		   			<div id="collapseOne" name="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
   						  	What: Multiple copies of an UAV carying a camera and a bottle of water - with bottle release mechanisn (multiple sets of electronics and cameras).<br>
 							   When: All I know is "October"
@@ -313,7 +313,7 @@
 						What exactly will the plane do?
 						</a>
 					</div>
-					<div id="collapseTwo" class="accordion-body collapse">
+					<div id="collapseTwo" name="collapseTwo" class="accordion-body collapse">
 						<div class="accordion-inner">
 							It will be looking for a man sized figurine wearing yellow shirt and blue trousers (in the desert) and once identified, it will drop the bottle of water as close to it as possible (water must land within 100 meters of the target, preferably closer).
 						</div>
