056 script css faq debug

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.55 ::</title>
+    <title>UAVs Bitstarter :: v 0.56 ::</title>
 	<!-- 055 faq debug -->
+  <!-- 056 css/faq debug -->
 	<!-- todo1 responsive design -->
 	<!-- todo2 async flow control -->
     <!-- 053 removed reference to github(username) github.com/.../bitstarter/ around August 2013 -->
@@ -35,6 +36,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
     <link href="https://d396qusza40orc.cloudfron.net/startup%2Fcode%2Fsocial-buttons.css" rel="stylesheet">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script><!-- how could I've missed this one? -->
     <style type="text/css">
 
     /* large desktop */
