056 fit for heroku
faq fixed

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>UAVs Bitstarter :: v 0.56 ::</title>
-	<!-- 055 faq debug -->
-  <!-- 056 css/faq debug -->
-	<!-- todo1 responsive design -->
-	<!-- todo2 async flow control -->
+	   <!-- todo1 responsive design -->
+	   <!-- todo2 async flow control -->
     <!-- 053 removed reference to github(username) github.com/.../bitstarter/ around August 2013 -->
-	<!-- -->
+	 <!-- -->
     <!-- if you reed source code, you will find everything in the comments -->    
     <!-- -->
     <!-- quick & brief thanks to our sponsors and appreciated resources: -->
@@ -36,7 +34,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
     <link href="https://d396qusza40orc.cloudfron.net/startup%2Fcode%2Fsocial-buttons.css" rel="stylesheet">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script><!-- how could I've missed this one? -->
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script><!-- 056 how could I've missed this one? -->
     <style type="text/css">
 
     /* large desktop */
@@ -236,11 +234,11 @@
   			<p>
   				Known errors list:<br>
   		<!-- branch candidate / api / async flow / state variable -->
- 				<i>2. static donations progressbar</i> (I've figured out how to fix this)<br>
+ 				<i>2. static donations status</i> (I've figured out how to enable dynamic bitcoin progressbar)<br>
 				3. not a real fundraising page. Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There will be real fundraising going on in October 2013 though.<br>
  		<!-- :: 048 :: priority 1 - branch candidate -->
- 				6. looks the same on mobile, just downsized. not really responsive at the moment. I must have skipped a step in the development.<a id="about"></a><br> 				
+ 				6. looks the same on mobile, just downsized. not really responsive at the moment. I must have skipped a step in the development.<a id="about"></a><br> 
   			</p>
   		</div>
   	</div>
@@ -321,7 +319,6 @@
 						</div>
 					</div>
 				</div>
-				<!-- aand it's gone 049
 				<div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
@@ -334,6 +331,7 @@
 						</div>
 					</div>
 				</div>		
+        <!-- aand it's gone 049
 				<div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
